[tool.poetry]
name = "treeo"
description = "Library to easily create, edit and traverse nested objects of dicts and lists in Python"
version = "0.1.17"
keywords = ["json", "yaml", "api", "dict", "list"]
license = "ISC"
authors = ["Lukas Neuenschwander <fjellvannet@gmail.com>"]
maintainers = ["treeorg"]
repository = "https://github.com/treeorg/TreeO"
homepage = "https://github.com/treeorg/TreeO"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", python = "^3.6.2"}
flake8 = "^3.7.9"
commitizen = {version = "^2.24.0", python = "^3.6.2"}
pre-commit = [
    {version = "^2.17.0, <2.18.0", python = "^3.6.1, <3.7.0"},
    {version = "^2.18.0", python = "^3.7.0"}
]
Sphinx = "^4.5.0"
sphinx-rtd-theme = {version = "^1.0.0", python = "^3.7"}
click = "^8.0.4"


[tool.black]
line-length=120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
