[tool.poetry]
name = "fagus"
description = "Library to easily create, edit and traverse nested objects of dicts and lists in Python"
version = "1.1.0"
keywords = ["json", "yaml", "api", "dict", "list"]
license = "ISC"
authors = ["Lukas Neuenschwander <fjellvannet@gmail.com>"]
maintainers = ["treeorg"]
repository = "https://github.com/treeorg/Fagus"
homepage = "https://github.com/treeorg/Fagus"
documentation = "https://fagus.readthedocs.io/en/latest/"
readme = "README.md"
include = [
    "LICENSE.md"
]

[tool.poetry.dependencies]
python = "^3.6"
typing-extensions = [
    {version = ">=3.7.4", python = "^3.6,<3.7"},
    {version = ">=3.7.4", python = ">3.7,<3.10"}
]

[tool.poetry.dev-dependencies]
black = [
    {version = "^22.8.0", python = ">=3.6.2,<3.7"},
    {version = ">=22.8.0", python = ">=3.7"}
]
flake8 = [
    {version = "^3.7.9", python = ">=3.6"},
    {version = ">=3.7.9", python = ">=3.7"}
]
commitizen = [
    {version = ">2", python = ">=3.7"}
]
pre-commit = [
    {version = "^2.17.0, <2.18.0", python = ">=3.6.1,<3.7"},
    {version = "^2.18.0", python = ">=3.7"}
]
click = "^8.0.4"
sphinx = {version = "^4.5.0", python=">=3.7"}
sphinx-rtd-theme = {version = "^1.2.2", python = ">=3.7"}
myst-parser = {version = "^0.17.2", python = ">=3.7"}
mypy = {version = "^1.4.1", python = ">=3.7"}

[tool.black]
line-length=120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
